@@ -1,0 +1,33 @@
+# t511 --- ci -iREV -mm
+#
+# Copyright (C) 2010 Thien-Thi Nguyen
+#
+# This program is free software: you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation, either version 3 of
+# the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty
+# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+# See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+. $srcdir/common
+split_std_out_err no
+. $srcdir/common-i
+
+$hey echo '                                      -*- org -*-'
+
+wdisp=removed
+rev_rx='^4\.20$'
+log_rx='^@OK$'
+
+triple "ci -i4.20 -mOK"
+triple 'ci -i4.20 -mOK -w00t'
+triple 'ci -i4.20 -mOK -nomoly'
+triple 'ci -i4.20 -mOK -w00t -nomoly'
+
+# t511 ends here
